# k3s-ansible

./: .ansible-lint  .gitattributes  .gitignore  .yamllint  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Notes.md  Pipfile  README.md  README_FORK.md  SCS.md  TODO.md  Vagrantfile  \  ansible.cfg  argocd-values.yaml  enable-ethernet.yml  firewall.yml  galaxy-requirements.yml  galaxy.yml  inventory-sample.yml  inventory.yml  known_hosts.old  kube-prometheus-stack-values.yaml  load_balancer.yml  payload.json  pi-inventory.yml  pyproject.toml  reboot.yml  renovate.json  requirements.txt  reset.yml  run_playbook.sh  setup-cluster.sh  shutdown.yml  site.yml  suse.yml-bak  test-external-hdd.yml
.devcontainer/: Dockerfile  devcontainer.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.requirements/: 2.10.txt  latest.txt
collections/: requirements.yaml  requirements.yml
defaults/: main.yml
dnd/: Dockerfile  ansible_install.sh  docker-compose.yaml  inventory.yml
docs/: common.md  lb.md
environments/: shared_vars.yml
group_vars/: agent_droid.yml  all.yml
handlers/: main.yml
inventory/: .gitignore
iptables-rules/: rules.v4
kube-vip/: manifest.yaml
kubernetes/: autoscaler-deployment.yml  autoscaler-service.yml  mysql-deployment.yml  mysql-pv.yml  mysql-pvc.yml  mysql-service.yml  stregsystemet-deployment.yml  stregsystemet-service.yml
meta/: main.yml  runtime.yml
monitoring-sharing/: cluster_specs_report.yml  fetch_kubeconfig.yml  merge_kubeconfig_locally.yml
playbook/: .gitignore  bootstrap.yml  config.yml  deploy_argocd.yml  (+6 more)
(+363 files in other folders)
